--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FightCorona</string>
+    <string name="permission_needed">Location permission needed</string>
+    <string name="permission_dialog_desc">In order to use the app, you must give us location permissions</string>
+    <string name="go_to_settings">Settings</string>
+    <string name="cancel_button">Cancel</string>
 </resources>
