--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="permission_dialog_desc">In order to use the app, you must give us location permissions</string>
     <string name="go_to_settings">Settings</string>
     <string name="cancel_button">Cancel</string>
+    <string name="add_volunteer">Add volunteer</string>
+    <string name="add_people_who_needs_help">Add people who needs help</string>
 </resources>
