Implement code to enable user to select his current address

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="hint_name">Name</string>
     <string name="hint_notes">Notes</string>
     <string name="to_add_new_volunteer_please_fill_out_the_fields_below">To add new volunteer, please fill out the fields below</string>
+    <string name="choose_address">Choose address</string>
+    <string name="drop_the_pin_on_your_address">Drop the pin on your address</string>
+    <string name="cancel">Cancel</string>
+    <string name="continue_text">Continue</string>
 </resources>
