--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="add_people_who_needs_help">Add people who needs help</string>
     <string name="hint_phone">Phone</string>
     <string name="hint_email">Email</string>
-    <string name="hint_name">Name</string>
+    <string name="hint_name">Name*</string>
     <string name="hint_notes">Notes</string>
     <string name="to_add_new_volunteer">To add new volunteer, please fill out the fields below</string>
     <string name="to_add_new_endangered">To add new endangered person, please fill out the fields below</string>
@@ -18,11 +18,16 @@
     <string name="add_endangered">Add endangered</string>
     <string name="create">Create</string>
     <string name="visited">Visited</string>
-    <string name="visit_detail">Visit details</string>
+    <string name="visit_detail">Details</string>
     <string name="remove">Remove</string>
     <string name="last_visited">Last visited:</string>
     <string name="required">Required:</string>
     <string name="volunteer_who_visited_this_person_last_wrote">Feedback from last volunteer who visited this person:</string>
     <string name="view_all_feedback">View all feedback</string>
-    <string name="address">Address</string>
+    <string name="address">Address*</string>
+    <string name="apartment">Apartment*</string>
+    <string name="floor">Floor</string>
+    <string name="notes">Notes:</string>
+    <string name="address_label">Address:</string>
+    <string name="format_address">%1s/%1s</string>
 </resources>
