--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,11 +41,13 @@
     <string name="email_label">Email:</string>
     <string name="select_max_distance_to_search_for_endangered_person">Select max distance to search for endangered person:</string>
     <string name="selected_distance">Selected distance: %1$dkm</string>
-
-    <string name="facebook_application_id" translatable="false">586359555297489</string>
-    <string name="facebook_login_protocol_scheme" translatable="false">fb586359555297489</string>
     <string name="volunteer_details">Volunteer details</string>
     <string name="here_you_can_find_detailed_information_about_volunteer">Here you can find detailed information about volunteer.</string>
     <string name="please_contact_volunteer_only_if_s_absolutely_necessary">Please contact volunteer only if it\'s absolutely necessary!</string>
     <string name="phone_label">Phone:</string>
+
+    <string name="facebook_app_id">586359555297489</string>
+    <string name="fb_login_protocol_scheme">fb586359555297489</string>
+    <string name="welcome_to_nfight_covid_19">Fight Covid 19</string>
+    <string name="welcome_to">Welcome to</string>
 </resources>
