--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,11 @@
     <string name="volunteer">Volunteer</string>
     <string name="endangered_person">Endangered person</string>
     <string name="more_details">Click for more details</string>
+    <string name="help">Help</string>
+    <string name="map_marker_legend">Map marker legend:</string>
+    <string name="volunteer_marker">Volunteer marker</string>
+    <string name="last_visit_was_today">Last visit was today</string>
+    <string name="last_visit_was_in_the_last_3_days">Last visit was in the last 3 days</string>
+    <string name="no_feedback_for_this_person">No feedback for this person</string>
+    <string name="last_visit_was_more_then_7_days_ago">Last visit was more then 7 days ago</string>
 </resources>
