--- a/app/src/main/res/values-sr-rRS/strings.xml
+++ b/app/src/main/res/values-sr-rRS/strings.xml
@@ -25,4 +25,39 @@
     <string name="address">Adresa*</string>
     <string name="apartment">Broj*</string>
     <string name="floor">Sprat</string>
+    <string name="last_visited">Poslednja poseta:</string>
+    <string name="required">Neophodno:</string>
+    <string name="view_all_feedback">Pogledaj sve komentare</string>
+    <string name="volunteer_who_visited_this_person_last_wrote">Komentar poslednjeg volontera koji je posetio ovu osobu:</string>
+    <string name="notes">Dodatne informacije:</string>
+    <string name="address_label">Adresa:</string>
+    <string name="visit_details">Detalji o poseti</string>
+    <string name="add_visit">Dodaj posetu</string>
+    <string name="add_visit_for_this_person">Dodaj posetu za ovu osobu</string>
+    <string name="please_send_us_your_feedback_if_you_ve_visited_this_person">Molimo vas pošaljite komentar ukoliko ste posetili ovu osobu</string>
+    <string name="settings">Podešavanja</string>
+    <string name="logout">Izloguj se</string>
+    <string name="profile">Profil</string>
+    <string name="name">Ime:</string>
+    <string name="select_max_distance_to_search_for_endangered_person">Izaberite maksimalnu distancu za pretraživanje ugrožene osobe:</string>
+    <string name="selected_distance">Izabrana distanca: %1$dkm</string>
+    <string name="volunteer_details">Detalji o volonteru</string>
+    <string name="here_you_can_find_detailed_information_about_volunteer">Ovde možete pronaći detaljnije informacije o volonteru.</string>
+    <string name="please_contact_volunteer_only_if_s_absolutely_necessary">Molimo Vas da kontaktirate volontera samo ako je to u potpunosti neophodno!</string>
+    <string name="phone_label">Telefon:</string>
+    <string name="welcome_to">Dobrodošli u</string>
+    <string name="create_visit">Kreiraj posetu</string>
+    <string name="visit_created">Poseta kreirana</string>
+    <string name="error_creating_visit">Došlo je do greške</string>
+    <string name="map_type">Tip mape</string>
+    <string name="nobody_visited_person">Niko nije posetio ovu osobu</string>
+    <string name="no_special_notes">Nema detaljnijih informacija</string>
+    <string name="volunteer">Volonter</string>
+    <string name="endangered_person">Ugrožena osoba</string>
+    <string name="more_details">Kliknite za više detalja</string>
+    <string name="help">Pomoć</string>
+    <string name="last_visit_was_today">Poslednja poseta je bila danas</string>
+    <string name="last_visit_was_in_the_last_3_days">Poslednja poseta je bila u prethodnih 3 dana</string>
+    <string name="no_feedback_for_this_person">Nema komentara za ovu osobu</string>
+    <string name="last_visit_was_more_then_7_days_ago">Poslednja poseta bila je pre više od 7 dana</string>
 </resources>
